--- a/pages/docs/guides/customize-compose-and-traefik.mdx
+++ b/pages/docs/guides/customize-compose-and-traefik.mdx
@@ -2,9 +2,12 @@ import { Callout, FileTree } from 'nextra-theme-docs';
 
 # Customize main docker compose and traefik config
 
-## Overview
-
 In this guide, we'll show you how to customize the default docker compose file of tipi and the traefik config.
+
+<Callout type="warning">
+  This guide is for advanced users who are familiar with docker and traefik. If you break the config
+  we won't be able to support you.
+</Callout>
 
 ## Example use cases
 
