--- a/pages/docs/reference/release-notes.mdx
+++ b/pages/docs/reference/release-notes.mdx
@@ -2,6 +2,24 @@
 
 In this document, we will keep track of all release notes of Runtipi.
 
+## 3.0.3
+
+**Fixes**
+
+- Increase CLI compatibility by targeting `musl` to fix a bug with glibc compatibility in older distributions
+
+## 3.0.2
+
+**Fixes**
+
+- Fields `port` and `sslPort` of the `settings.json` file where not correctly registered on start
+
+## 3.0.1
+
+**Fixes**
+
+- There was an issue with some apps and their permissions to access the files
+
 ## 3.0.0
 
 This is a breaking change release. Please read the [migration guide](https://runtipi.io/docs/reference/breaking-updates#update-from-2xx-to-300) before updating
