--- a/pages/docs/guides/customize-compose-and-traefik.mdx
+++ b/pages/docs/guides/customize-compose-and-traefik.mdx
@@ -19,7 +19,7 @@ In this guide, we'll show you how to customize the default docker compose file o
 
 In this example we will expose the traefik dashboard by editing the main tipi compose file.
 
-Firstly we need to figure out what port traefik dashboard uses (which is 8080) and what is the name of the docker container of traefik (which we can learn from the `docker-compose.yml`) which is `tipi-reverse-proxy` in this case.
+Firstly we need to figure out what port traefik dashboard uses (which is 8080) and what is the name of the docker container of traefik (which we can learn from the `docker-compose.yml`) which is `runtipi-reverse-proxy` in this case.
 
 <Callout>
   Don't edit the `docker-compose.yml` file directly because it will be overwritten in every restart
