docs: add all new environment variables

--- a/pages/docs/getting-started/custom-settings.mdx
+++ b/pages/docs/getting-started/custom-settings.mdx
@@ -25,7 +25,7 @@ You can change the default settings by creating a `settings.json` file. The file
 | `port`                 | The port to use for the dashboard                                           | `interger` | `80`                                          |
 | `sslPort`              | The port to use for the dashboard with SSL                                  | `interger` | `443`                                         |
 | `listenIp`             | The IP address to listen on                                                 | `string`   | `automatically detected`                      |
-| `storagePath`          | The path to use for storing data                                            | `string`   | `runtipi/app-data`                            |
+| `appDataPath`          | The path to use for storing data                                            | `string`   | `runtipi/app-data`                            |
 | `localDomain`          | The domain name to use for local services                                   | `string`   | `tipi.lan`                                    |
 | `appsRepoUrl`          | The URL to the apps repository                                              | `string`   | `https://github.com/runtipi/runtipi-appstore` |
 | `postgresPort`         | The port to use for the postgres database                                   | `interger` | `5432`                                        |
