--- a/pages/docs/getting-started/custom-settings.mdx
+++ b/pages/docs/getting-started/custom-settings.mdx
@@ -29,8 +29,8 @@ You can change the default settings by creating a `settings.json` file. The file
 | `localDomain`          | The domain name to use for local services                                   | `string`   | `tipi.lan`                                    |
 | `appsRepoUrl`          | The URL to the apps repository                                              | `string`   | `https://github.com/runtipi/runtipi-appstore` |
 | `postgresPort`         | The port to use for the postgres database                                   | `interger` | `5432`                                        |
-| `demoMode`             | Start tipi in demo mode                                                     | `boolean`  | `false`                                       |
+| `demoMode`             | Start runtipi in demo mode                                                  | `boolean`  | `false`                                       |
 | `guestDashboard`       | Allow guest access to the dashboard                                         | `boolean`  | `false`                                       |
 | `allowErrorMonitoring` | Whether the app will send anonymous crash reports to the runtipi developers | `boolean`  | `true`                                        |
 | `allowAutoTheme`       | Enables thematically changing the dashboard based on the time of the year   | `boolean`  | `true`                                        |
-| `persistTraefikConfig` | Do not replace the traefik config on every restart of tipi.                 | `boolean`  | `true`                                        |
+| `persistTraefikConfig` | Do not replace the traefik config on every restart of runtipi.              | `boolean`  | `true`                                        |
