--- a/pages/docs/guides/linking-a-domain-to-your-dashboard.mdx
+++ b/pages/docs/guides/linking-a-domain-to-your-dashboard.mdx
@@ -1,9 +1,11 @@
 # Linking a domain to your dashboard
 
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from 'nextra-theme-docs';
 
 <Callout emoji="🚨">
-For security reasons, it is highly discouraged to expose your dashboard to the internet. We recommend you to [expose only individual apps](/docs/guides/expose-your-apps). And follow this guide only if you have a particular use case (e.g. a demo instance of tipi)
+  For security reasons, it is highly discouraged to expose your dashboard to the internet. We
+  recommend you to [expose only individual apps](/docs/guides/expose-your-apps). And follow this
+  guide only if you have a particular use case (e.g. a demo instance of runtipi)
 </Callout>
 
 If you want to link a domain to your dashboard, you can do so by providing the `domain` option in your dashboard settings or with the `settings.json` file.
