--- a/pages/docs/guides/uninstalling.mdx
+++ b/pages/docs/guides/uninstalling.mdx
@@ -1,6 +1,6 @@
 # Uninstalling
 
-Make sure Tipi is completely stopped and then remove the `runtipi` directory.
+Make sure runtipi is completely stopped and then remove the `runtipi` directory.
 
 ```bash
 sudo ./runtipi-cli stop
