--- a/pages/docs/introduction.mdx
+++ b/pages/docs/introduction.mdx
@@ -11,21 +11,21 @@ import { WrenchIcon, LightBulbIcon } from '@heroicons/react/24/outline';
   contributing to the project or by providing feedback.
 </Callout>
 
-Tipi is an open source personal homeserver orchestrator that enables you to manage and run multiple services on a single server.
+Runtipi is an open source personal homeserver orchestrator that enables you to manage and run multiple services on a single server.
 It is based on Docker and comes with a user-friendly web interface that simplifies service management.
-With Tipi, you no longer need to worry about manual configuration or networking.
-Install Tipi on your server and use the web interface to add and manage services.
+With runtipi, you no longer need to worry about manual configuration or networking.
+Install runtipi on your server and use the web interface to add and manage services.
 
-At its core, Tipi is designed to be easy to use and accessible for everyone.
-Whether you are an experienced developer or a beginner, Tipi allows you to focus on the services you want to run without the need for extensive technical knowledge.
+At its core, runtipi is designed to be easy to use and accessible for everyone.
+Whether you are an experienced developer or a beginner, runtipi allows you to focus on the services you want to run without the need for extensive technical knowledge.
 The project's philosophy is to democratize the ability to self-host services by providing a simple, yet powerful tool that enables everyone to host their own services.
 
-Tipi comes with an extensive library of services in the [App Store](/docs/apps-available).
+Runtipi comes with an extensive library of services in the [App Store](/docs/apps-available).
 If you cannot find what you need, you can request new services, and the community can work together to develop them.
 
-Tipi is still in its early stages of development, and issues may occur. Nevertheless, the community is continuously working to improve the project, and everyone is welcome to contribute.
+Runtipi is in continuous development, so issues may occur. Nevertheless, the community is continuously working to improve the project, and everyone is welcome to contribute.
 
-To get started with Tipi, follow the installation instructions, and enjoy hosting your own services effortlessly.
+To get started with runtipi, follow the installation instructions, and enjoy hosting your own services effortlessly.
 
 <Cards>
   <Card icon={<LightBulbIcon />} title="Apps available" href="/docs/apps-available" />
