--- a/pages/docs/reference/third-party-services.mdx
+++ b/pages/docs/reference/third-party-services.mdx
@@ -2,7 +2,7 @@
 
 ## Telemetry
 
-After install Tipi will ask you if you agree to send anonymous crash reports to [Sentry](https://sentry.io). This is one of the best ways to help
+After install, runtipi will ask you if you agree to send anonymous crash reports to [Sentry](https://sentry.io). This is one of the best ways to help
 the team if you are not able to contribute. These reports help the team to debug and resolve issues in a fast manner.
 If you change your mind after enabling it, you can disable the option in the settings page of the dashboard or by adding
 the following option in your `settings.json` file:
@@ -13,4 +13,4 @@ the following option in your `settings.json` file:
 }
 ```
 
-Tipi does not have any user-tracking or analytics feature. It does not collect any data about you or your usage as an individual or as a group.
+Runtipi does not have any user-tracking or analytics feature. It does not collect any data about you or your usage as an individual or as a group.
