--- a/pages/docs/guides/local-certificate.mdx
+++ b/pages/docs/guides/local-certificate.mdx
@@ -1,13 +1,13 @@
-import Image from 'next/image'
-import { Callout } from 'nextra-theme-docs'
+import Image from 'next/image';
+import { Callout } from 'nextra-theme-docs';
 
 # Local SSL certificate
 
-Requried Tipi version: `>= 1.5.0`
+Requried Runtipi version: `>= 1.5.0`
 
 ## Introduction
 
-With Tipi you can access your dashboard and apps locally using a secure connection. When installing Tipi, a self-signed SSL certificate is generated for you.
+With runtipi you can access your dashboard and apps locally using a secure connection. When installing runtipi, a self-signed SSL certificate is generated for you.
 
 The default domain for the certificate is `tipi.lan`. You can change this domain in the settings page of the dashboard. Or by giving the `localDomain` value in your `settings.json` file.
 See the [custom-settings](/docs/getting-started/custom-settings) section for more information.
@@ -15,7 +15,7 @@ See the [custom-settings](/docs/getting-started/custom-settings) section for mor
 ## Trusting the certificate
 
 To be able to use the certificate, you need to trust it. This is done by adding the certificate to your operating system's trust store.
-First you need to export the certificate from the Tipi dashboard. You can do this by clicking the `Download certificate` button in the settings page of the dashboard. (below the `Local domain` input field)
+First you need to export the certificate from the runtipi dashboard. You can do this by clicking the `Download certificate` button in the settings page of the dashboard. (below the `Local domain` input field)
 
 ### Windows
 
@@ -41,15 +41,16 @@ First you need to export the certificate from the Tipi dashboard. You can do thi
 
 ## DNS resolution
 
-To be able to access your dashboard and apps using the local domain, you need to make sure that the domain resolves to the IP address of your Tipi server.
+To be able to access your dashboard and apps using the local domain, you need to make sure that the domain resolves to the IP address of your runtipi server.
 
 The easiest way to do this is by running a DNS server on your network and adding the domain to it.
-You can use **Pi-hole** or **AdGuard Home** for this. Both are available as apps in the Tipi App store.
+You can use **Pi-hole** or **AdGuard Home** for this. Both are available as apps in the runtipi App store.
 
 For example using AdGuard Home you can add the domain to the `DNS rewrites` section of the app.
 
 <Callout>
-  Don't forget to add the wildcard domain `*.tipi.lan` to the `DNS rewrites` section in order to be able to access your apps as well.
+  Don't forget to add the wildcard domain `*.tipi.lan` to the `DNS rewrites` section in order to be
+  able to access your apps as well.
 </Callout>
 
 <br />
@@ -57,8 +58,10 @@ For example using AdGuard Home you can add the domain to the `DNS rewrites` sect
 
 If you don't have a DNS server running on your network, you can add the domain to the `hosts` file on your computer.
 
-<Callout emoji='⚠️' type='warning'>
-  By using this method you need to do this on every device you want to access your dashboard and apps from and for every domain you want to use. (e.g. `tipi.lan`, `app1.tipi.lan`, `app2.tipi.lan`)
+<Callout emoji="⚠️" type="warning">
+  By using this method you need to do this on every device you want to access your dashboard and
+  apps from and for every domain you want to use. (e.g. `tipi.lan`, `app1.tipi.lan`,
+  `app2.tipi.lan`)
 </Callout>
 
 ### Windows
@@ -69,7 +72,7 @@ If you don't have a DNS server running on your network, you can add the domain t
 4. Change the file filter to `All Files (*.*)`.
 5. Select `hosts` and click `Open`.
 6. Add the following line to the end of the file: `
-    <ip-address> <domain>`.
+<ip-address> <domain>`.
 7. Save the file.
 
 ### macOS / Linux
@@ -80,4 +83,3 @@ If you don't have a DNS server running on your network, you can add the domain t
 4. Press `Ctrl + X` to exit.
 5. Press `Y` to save the file.
 6. Press `Enter` to confirm the file name.
-
