--- a/pages/docs/reference/architecture.mdx
+++ b/pages/docs/reference/architecture.mdx
@@ -1,5 +1,5 @@
-import archDiagram from '../../../public/images/arch-diagram.png'
-import Image from 'next/image'
+import archDiagram from '../../../public/images/arch-diagram.png';
+import Image from 'next/image';
 
 # Architecture
 
@@ -7,9 +7,9 @@ import Image from 'next/image'
 
 <Image src={archDiagram} alt="Architecture Diagram" />
 
-## Technologies 
+## Technologies
 
-Runtipi is built using a modern web architecture and emphasizes on end-to-end type safety. The following technologies are used: 
+Runtipi is built using a modern web architecture and emphasizes on end-to-end type safety. The following technologies are used:
 
 - [Traefik](https://traefik.io/) - Reverse proxy and load balancer
 - [Docker](https://www.docker.com/) - Containerization
@@ -23,11 +23,10 @@ Runtipi is built using a modern web architecture and emphasizes on end-to-end ty
 ## Reverse Proxy
 
 Traefik is used as a reverse proxy and load balancer. It is configured to automatically detect new services and configure them to receive traffic from the internet.
-Each service is automatically configured to be able to receive an SSL certificate from [Let's Encrypt](https://letsencrypt.org/) using the [HTTP Challenge](https://letsencrypt.org/docs/challenge-types/#http-01-challenge). 
+Each service is automatically configured to be able to receive an SSL certificate from [Let's Encrypt](https://letsencrypt.org/) using the [HTTP Challenge](https://letsencrypt.org/docs/challenge-types/#http-01-challenge).
 
 ## Applications
 
 Docker is used to containerize the application. Each service is built into a Docker image and deployed using [Docker Compose](https://docs.docker.com/compose/).
 Each app you install is deployed as a separate Docker Compose project. This allows you to easily manage each app independently.
 All apps are deployed to the same network, allowing them to communicate with each other.
-
