--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,6 +3,6 @@ title: Runtipi | Homeserver management made easy
 description: Easy to use homeserver orchestrator to manage all your favorite self-hosted services.
 ---
 
-import Home from "../components/pages/home";
+import Home from '../components/pages/home';
 
-<Home/>
+<Home />
