docs: change use RUNTIPI_APP_DATA_PATH in running locally section

--- a/pages/docs/contributing/running-locally.mdx
+++ b/pages/docs/contributing/running-locally.mdx
@@ -25,12 +25,12 @@ Install the project dependencies
 You need to copy `.env.exemple` to `.env` and edit there following env
 
 - ROOT_FOLDER_HOST change to put your root folder of runtipi
-- STORAGE_PATH change to put your storage folder of runtipi
+- RUNTIPI_APP_DATA_PATH change to put your app data folder of runtipi
 
 ## Run runtipi
 
 1. Start the app with `npm run start:dev` from the root folder
-2. Visit `localhost:3000` in your browser
+2. Visit `localhost` in your browser
 
 ## Using your own appstore repo
 
