docs: fix typo in installation

--- a/pages/docs/getting-started/installation.mdx
+++ b/pages/docs/getting-started/installation.mdx
@@ -28,7 +28,7 @@ Our software uses containerization and has the same hardware requirements as Doc
 - arm64
 
 <Callout>
-  Not all apps are supported in the arm64 architecture, runttipi will auto hide apps that are not
+  Not all apps are supported in the arm64 architecture, runtipi will auto hide apps that are not
   supported by your architecture.
 </Callout>
 
