docs: remove <br> in callout

--- a/pages/docs/getting-started/installation.mdx
+++ b/pages/docs/getting-started/installation.mdx
@@ -40,9 +40,8 @@ Please file an issue if you encounter one.
 If Docker is already installed on your machine, runtipi will use it to run the dashboard. Otherwise, it will install Docker for you.
 
 <Callout type="warning">
-  If you already have docker installed make sure to have the docker compose plugin installed.
-  <br />
-  Run `docker compose version` to check if it is installed. Instructions to install it can be found
+  If you already have docker installed make sure to have the docker compose plugin installed. Run
+  `docker compose version` to check if it is installed. Instructions to install it can be found
   [here](https://docs.docker.com/compose/install/linux/).
 </Callout>
 
