docs: make _meta.json titles match with guide titles

--- a/pages/docs/guides/customize-compose-and-traefik.mdx
+++ b/pages/docs/guides/customize-compose-and-traefik.mdx
@@ -1,6 +1,6 @@
 import { Steps, Callout, FileTree } from 'nextra-theme-docs';
 
-# Customize main docker compose and traefik config
+# Customize runtipi compose and traefik config
 
 In this guide, we'll show you how to customize the default docker compose file of runtipi and the traefik config.
 
