--- a/pages/docs/guides/dns-challenge-cloudflare.mdx
+++ b/pages/docs/guides/dns-challenge-cloudflare.mdx
@@ -1,7 +1,7 @@
 import { Steps, Callout } from 'nextra-theme-docs';
 import Image from 'next/image';
 
-# Setup a DNS challenge with cloudflare
+# Setup a DNS challenge with Cloudflare
 
 ## Overview
 
