docs: don't use should because Nicolas doesn't like it

--- a/pages/docs/contributing/adding-a-new-app.mdx
+++ b/pages/docs/contributing/adding-a-new-app.mdx
@@ -8,8 +8,8 @@ In this guide, we will show you how to add a new app to the Runtipi App Store. T
 
 ## Prerequisites
 
-- The app you want to add should be free and open-source (or at least source available with a permissive license for personal use)
-- The app you want to add should have an official and maintained docker image
+- The app you want to add is free and open-source (or at least source available with a permissive license for personal use)
+- The app you want to add has an official and maintained docker image
 
 ## Let's add the app
 
