docs: add missing bash decleration to using the cli

--- a/pages/docs/getting-started/using-the-cli.mdx
+++ b/pages/docs/getting-started/using-the-cli.mdx
@@ -77,7 +77,7 @@ it should prompt you to enter your new password.
 
 This command can be used to start and stop apps from the cli.
 
-```
+```bash
 ./runtipi-cli app [command] <app>
 ```
 
