--- a/pages/docs/guides/dns-challenge-cloudflare.mdx
+++ b/pages/docs/guides/dns-challenge-cloudflare.mdx
@@ -46,7 +46,7 @@ We need to give the token to traefik in order to do that we need to create a cus
 ```yaml
 version: '3.9'
 services:
-  tipi-reverse-proxy:
+  runtipi-reverse-proxy:
     environment:
       - CF_DNS_API_TOKEN=yourtoken
 ```
